# stemforge

./: .gitignore  README.md  pyproject.toml
infra/: docker-compose.prod.yml  docker-compose.yml
infra/redis/: redis.conf
services/api-gateway/: Dockerfile  pyproject.toml
services/api-gateway/src/api_gateway/: main.py
services/download-service/: Dockerfile  pyproject.toml
services/download-service/src/download_service/: main.py
services/frontend/: .gitignore  Dockerfile  package.json
services/frontend/app/: layout.tsx  page.tsx
services/separation-service/: Dockerfile  pyproject.toml
services/separation-service/src/separation_service/: main.py
shared/jobstore/: pyproject.toml
shared/jobstore/src/stemforge_jobstore/: __init__.py  store.py
shared/schemas/: pyproject.toml
shared/schemas/src/stemforge_schemas/: __init__.py  constants.py  enums.py  models.py
