[project]
name = "api-gateway"
version = "0.1.0"
description = "stemforge HTTP API gateway."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2",
    "redis>=5",
    "rq>=1.16",
    "stemforge-schemas",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/api_gateway"]

[tool.uv.sources]
stemforge-schemas = { workspace = true }
