[project]
name = "download-service"
version = "0.1.0"
description = "stemforge worker that downloads YouTube tracks."
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2",
    "redis>=5",
    "rq>=1.16",
    "stemforge-schemas",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/download_service"]

[tool.uv.sources]
stemforge-schemas = { workspace = true }
