[project]
name = "separation-service"
version = "0.1.0"
description = "stemforge worker that separates audio into stems with Demucs."
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2",
    "redis>=5",
    "rq>=1.16",
    "stemforge-schemas",
    # demucs (instalar en imagen real)
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/separation_service"]

[tool.uv.sources]
stemforge-schemas = { workspace = true }
