[project]
name = "stemforge-jobstore"
version = "0.1.0"
description = "Redis-backed job state store for stemforge (HSET + PUBLISH)."
requires-python = ">=3.12"
dependencies = [
    "redis>=5",
    "stemforge-schemas",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stemforge_jobstore"]

[tool.uv.sources]
stemforge-schemas = { workspace = true }
